<resources>
    <string name="app_name">Chimata Player</string>
    <string name="now_playing_eyebrow">NOW PLAYING</string>
    <string name="search_hint">Search song, movie, hero, director, lyricist… (try "and"/"or")</string>
    <string name="nothing_playing">Nothing playing</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle_on">Shuffle: ON</string>
    <string name="sequential_on">Shuffle: OFF (Sequential)</string>
</resources>
